--- a/package.json
+++ b/package.json
@@ -53,9 +53,10 @@
     "framer-motion": "^12.4.7",
     "hono": "^4.7.2",
     "input-otp": "^1.4.2",
-    "jose": "^6.0.10",
+    "jiti": "^2.6.1",
+    "jose": "^6.1.0",
     "lucide-react": "^0.475.0",
-    "next": "^15.3.4",
+    "next": "^15.5.5",
     "next-themes": "^0.4.4",
     "nodemailer": "^7.0.9",
     "react": "19.0.0",
@@ -73,8 +74,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/node": "^20.19.21",
+    "@types/react": "19.2.2",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
