--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "next": "^15.5.5",
     "next-themes": "^0.4.4",
     "nodemailer": "^7.0.9",
+    "postcss-js": "^5.0.1",
     "react": "19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "19.0.0",
