--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "karhuno",
   "version": "0.8.5",
   "private": true,
+  "engines": {
+    "node": ">=20 <21"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -48,7 +51,7 @@
     "cmdk": "1.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
-    "drizzle-kit": "^0.18.1",
+    "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.40.0",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.7",
@@ -57,7 +60,7 @@
     "jiti": "^2.6.1",
     "jose": "^6.0.10",
     "lucide-react": "^0.475.0",
-    "next": "15.3.6",
+    "next": "^15.5.7",
     "next-themes": "^0.4.4",
     "nodemailer": "^7.0.9",
     "react": "19.2.1",
