--- a/package.json
+++ b/package.json
@@ -49,11 +49,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.1.1",
+    "d3-scale": "^4.0.2",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.40.0",
     "embla-carousel-react": "^8.5.2",
+    "face-api.js": "^0.22.2",
     "framer-motion": "^12.4.7",
     "hono": "^4.7.2",
     "input-otp": "^1.4.2",
@@ -63,6 +65,7 @@
     "next": "^15.5.7",
     "next-themes": "^0.4.4",
     "nodemailer": "^7.0.9",
+    "postprocessing": "^6.38.0",
     "react": "19.2.1",
     "react-day-picker": "8.10.1",
     "react-dom": "19.2.1",
@@ -73,6 +76,7 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.181.2",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
