--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
   "functions": {
-    "runtime": "nodejs20.x"
+    "api/**": {
+      "runtime": "nodejs20.x"
+    },
+    "app/**": {
+      "runtime": "nodejs20.x"
+    }
   }
 }
